...
    );
  }

  @override
  Widget build(BuildContext context) {
    return GLScaffold(
      appBar: GLAppBar(title: 'Timeline', leading: const SettingsIconButton()),
      body: BlocConsumer<DiaryBloc, DiaryState>(builder: builder, listener: listener, buildWhen: buildWhen),
      floatingActionButton: const DiaryFloatingActionButton(key: Keys.diaryFab),
    );
  }

  bool buildWhen(DiaryState previous, DiaryState current) {
...
