...
}

class _MainTabsState extends State<MainTabs> with SingleTickerProviderStateMixin, RouteAware {
  final tabs = [
    const Tab(
      key: Keys.pantryTab,
      text: 'Pantry',
      icon: Icon(GLIcons.pantry),
    ),
    const Tab(
      key: Keys.diaryTab,
      text: 'Timeline',
      icon: Icon(GLIcons.diary),
    ),
    const Tab(
      key: Keys.browseTab,
      text: 'Foods',
      icon: Icon(GLIcons.browse),
...
